# bevy_chuynking_example

./: .gitignore  Cargo.toml
assets/loader/: ui-assets.assets
assets/raws/: hostiles.ron  items.ron
raws/: biome_bundle.ron  index.txt  plants_bundle.ron
src/: bterm.rs  camera.rs  constants.rs  main.rs  region.rs  saveload.rs  tile_type.rs
src/chunking/: bounds.rs  chunk.rs  chunk_resources.rs  entities.rs  location.rs  mod.rs
src/chunking/iter/: all_chunks_iter.rs  chunk_iter.rs  mod.rs
src/chunking/storage/: mod.rs
src/chunking/systems/: modify.rs  saveload.rs  view_chunks.rs
src/ecs/: events.rs
src/ecs/components/: glyph.rs  mod.rs
src/ecs/components/spatial/: mod.rs  planet_location.rs  position.rs  region_tile.rs
src/ecs/resources/: state.rs
src/ecs/systems/: fov.rs  mod.rs  movement.rs  render.rs
src/ecs/systems/player/: mod.rs
src/generation/: mod.rs  planet.rs
src/generation/planet_builder/: biomes.rs  calc.rs  coast.rs  mod.rs  noise.rs  type_allocation.rs  wind_and_rain.rs  zero.rs
src/loading/: loaders.rs  mod.rs
src/raws/: block_type.rs  mod.rs  strata.rs
src/raws/formats/: biomes.rs  bundle.rs  materials.rs  mod.rs  names.rs  plants.rs
src/simulation/: global_planet.rs  mod.rs  planet.rs  region.rs  region_loader.rs  river.rs
src/simulation/generation/: mod.rs
src/simulation/generation/planet_builder/: biomes.rs  calc.rs  mod.rs  rivers.rs  wind_and_rain.rs  zero.rs
src/simulation/generation/region_builder/: divide.rs  mod.rs  plants.rs
src/simulation/region_manager/: mod.rs  queries.rs  region_chunk_applicator.rs  region_chunk_populator.rs  region_loader.rs
src/simulation/region_manager/chunking/: bounds.rs  mod.rs  resources.rs
src/simulation/region_manager/chunking/chunks/: chunk.rs  chunk_location.rs  mod.rs
src/simulation/region_manager/chunking/iter/: all_chunks_iter.rs  chunk_iter.rs
src/ui/: debug.rs  debug_ui.rs  embark.rs  embark_region.rs  main_menu.rs  mod.rs  planet_builder.rs  world_gen.rs
src/util/: macros.rs  mod.rs
(+7 files in other folders)
