[package]
edition = "2021"
name    = "chunking_test"
version = "0.1.0"

[profile.dev.package."*"]
opt-level = 3

[profile.dev]
opt-level = 1

# Optimizations for WASM
[profile.release]
codegen-units = 1
lto           = true
opt-level     = 'z'
panic         = 'abort'

[features]
# bundled = ["bevy_embedded_assets"]
# debug-graph = ["bevy_mod_debugdump"]
default = ["dev"]
dev     = ["bevy/dynamic"]
hot     = ["bevy/filesystem_watcher"]
# release = ["bundled", "tracing/release_max_level_warn"]
trace = ["bevy/trace"]
tracy = ["bevy/trace", "bevy/trace_tracy"]

[dependencies]
bevy = { version = "0.8.1", default-features = false, features = [
  "bevy_asset",
  "bevy_winit",
  "render",
  "png",
  "x11",
] }
iyes_loopless = { version = "0.7", features = ["states"] }

# UI
bevy-inspector-egui = "0.13"
bevy_egui           = "0.16"

# Serialization
bincode     = "1"
derive_more = "0.99"
enumflags2  = "0.7"
lazy_static = "1.4"
miniz_oxide = "0.6"
parking_lot = "0.12"
ron         = "0.8"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"

anyhow       = "1.0"
direction    = { version = "0.18", features = ["serialize"] }
futures-lite = "1"

Inflector = "0.11"
ilattice  = { version = "0.2.0", features = ["glam", "morton-encoding"] }
ndcopy    = "0.3"
ndshape   = "0.3"
once_cell = "1.0"
simdnoise = { git = "https://github.com/jackmott/rust-simd-noise" }

bracket-bevy        = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-noise       = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-pathfinding = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }
bracket-random      = { git = "https://github.com/lecoqjacob/bracket-lib", branch = "custom" }

bevy_asset_loader = { git = "https://github.com/NiklasEi/bevy_asset_loader", features = [
  "2d",
  "stageless",
  "standard_dynamic_assets",
] }
bevy_ecs_tilemap = "0.8"
bevy_simple_tilemap = "0.9"
